@@ -105,8 +105,8 @@ else
 			<a href="Bottom.php?modfunc=print" target="_blank" title="<?php echo _('Print'); ?>" class="BottomButton"><img src="assets/themes/<?php echo Preferences('THEME'); ?>/btn/print.png" />&nbsp;<span><?php echo _('Print'); ?></span></a>
 			<?php if ( $RosarioModules['State_Reports']
 				&& User( 'PROFILE' ) === 'admin'
-				&& AllowEdit( 'State_Reports/SavedReports.php' ) ) : // Save Report. ?>
-				<a href="Modules.php?modname=State_Reports/SavedReports.php&amp;modfunc=new" class="BottomButton">
+				&& AllowEdit( 'Reports/SavedReports.php' ) ) : // Save Report. ?>
+				<a href="Modules.php?modname=Reports/SavedReports.php&amp;modfunc=new" class="BottomButton">
 					<img src="assets/themes/<?php echo Preferences('THEME'); ?>/btn/download.png" />&nbsp;<span><?php echo _( 'Save Report' ); ?></span>
 				</a>
 			<?php endif; ?>
