@@ -99,7 +99,6 @@ if(!defined('WAREHOUSE_PHP'))
 		'Accounting',
 		'Student_Billing',
 		'Food_Service',
-		'State_Reports',
 		'Resources',
 		'Custom'
 	);
