@@ -17,7 +17,6 @@ $RosarioCoreModules = array(
 	'Accounting',
 	'Student_Billing',
 	'Food_Service',
-	'State_Reports',
 	'Resources',
 	'Custom'
 );*/
