@@ -5,6 +5,7 @@ Changes in 2.8.25
 - Fix JS error related to jqPlot loading: wrap JS code inside 500ms timeout in *Breakdown.php
 - Prepare for State Reports module: Save Report bottom button & modname exception
 - Remove State_Reports.zip orginal module archive
+- Remove State_Reports from core modules & rename to "Reports"
 
 Changes in 2.8.24
 -----------------
